# nutripilot

./: .gitignore  DEMO_SCRIPT.md  PROJECT_PLAN.md  README.md  SYSTEM_ARCHITECTURE.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  biodata_scout.py  goal_evaluator.py  nutri_auditor.py  nutri_calibrator.py  vision_analyst.py
backend/app/core/: __init__.py  base_agent.py  calibration_report.py  orchestrator.py  state.py  storage.py  user_goals.py
core/: state.py
frontend/: README.md  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/components/: AnalysisResults.tsx  CalibrationReport.tsx  Dashboard.tsx  GoalSetup.tsx  ImageUpload.tsx  OnboardingPrompt.tsx  StreamingAnalysis.tsx  VerifyNutrition.tsx
frontend/lib/: api.ts
frontend/types/: meal.ts
opik_evals/: actionability_judge.md  actionability_metric.py  goal_adherence_metric.py  goal_evaluator_judge.md  production_eval.py  requirements.txt  run_evaluation.py
